<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_maps">


    <fragment
        android:id="@+id/fragment_maps"
        android:label="@string/ubicaciones"
        android:name="com.cm.gas_gps.ui.ubicaciones.UbicacionesFragment"
        tools:layout="@layout/fragment_ubicaciones">

    </fragment>

    <fragment
        android:id="@+id/fragment_rutas"
        android:label="@string/rutas"
        android:name="com.cm.gas_gps.ui.rutas.RutasFragment"
        tools:layout="@layout/fragment_rutas">

        <action
            android:id="@+id/action_next_to_rutas"
            app:destination="@+id/fragment_consumos"
            app:popUpTo="@+id/fragment_rutas"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/fragment_consumos"
        android:label="@string/consumos"
        android:name="com.cm.gas_gps.ui.consumos.ConsumosFragment"
        tools:layout="@layout/fragment_consumos">

    </fragment>

    <fragment
        android:id="@+id/fragment_users"
        android:label="@string/users"
        android:name="com.cm.gas_gps.ui.usuarios.UsuariosFragment"
        tools:layout="@layout/fragment_usuarios">

    </fragment>

    <fragment
        android:id="@+id/fragment_cars"
        android:label="@string/cars"
        android:name="com.cm.gas_gps.ui.vehiculos.VehiculosFragment"
        tools:layout="@layout/fragment_vehiculos">

    </fragment>

    <fragment
        android:id="@+id/fragment_notificaciones"
        android:label="@string/notificaciones"
        android:name="com.cm.gas_gps.ui.notificaciones.NotificacionesFragment"
        tools:layout="@layout/fragment_notificaciones">

    </fragment>

</navigation>